charts/homeassistant/ha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      nodeSelector:
        storage: "host"

      terminationGracePeriodSeconds: 10
      hostNetwork: true
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2026.9.3
          name: homeassistant
          volumeMounts:
            - name: homeassistant-volume
              mountPath: /config
          resources:
            limits:
              memory: 1.5Gi
              cpu: 1
      volumes:
        - name: homeassistant-volume
          hostPath:
            path: /mnt/data/homeassistant
            type: DirectoryOrCreate
