charts/homeassistant/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  ports:
    - name: http
      port: 8123
    - name: homekit
      protocol: TCP
      port: 21063
      targetPort: 21063
    - name: mDNS
      protocol: UDP
      port: 5353
      targetPort: 5353
  selector:
    app: homeassistant
